k8s/manifests/apps/immich/machine-learning.yaml
---
# Source: immich/templates/machine-learning.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  labels:
    app.kubernetes.io/component: machine-learning
spec:
  type: ClusterIP
  ports:
    - port: 3003
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/component: machine-learning
---
# Source: immich/templates/machine-learning.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-machine-learning
  labels:
    app.kubernetes.io/component: machine-learning
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: machine-learning
  template:
    metadata:
      labels:
        app.kubernetes.io/component: machine-learning
    spec:
      enableServiceLinks: false
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      hostUsers: false
      resourceClaims:
        - name: gpu
          resourceClaimTemplateName: intel-gpu
      containers:
        - env:
          - name: HF_XET_CACHE
            value: /cache/huggingface-xet
          - name: IMMICH_MACHINE_LEARNING_URL
            value: http://immich-machine-learning:3003
          - name: MPLCONFIGDIR
            value: /cache/matplotlib-config
          - name: REDIS_HOSTNAME
            value: immich-valkey
          - name: TRANSFORMERS_CACHE
            value: /cache
          image: ghcr.io/immich-app/immich-machine-learning:v3.3.0-openvino
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          name: main
          ports:
          - containerPort: 3003
            name: http
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          resources:
            claims:
            - name: gpu
            requests:
              memory: 750Mi
              cpu: 150m
            limits:
              memory: 5Gi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
          startupProbe:
            failureThreshold: 60
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /cache
              name: cache
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: cache
          persistentVolumeClaim:
            claimName: immich-machine-learning
        - name: tmp
          emptyDir:
            sizeLimit: 100Mi
