k8s/manifests/apps/immich/valkey.yaml
---
# Source: immich/templates/valkey.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-valkey
  labels:
    app.kubernetes.io/component: redis
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: redis
      protocol: TCP
      name: redis
  selector:
    app.kubernetes.io/component: redis
---
# Source: immich/templates/valkey.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-valkey
  labels:
    app.kubernetes.io/component: redis
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: redis
  template:
    metadata:
      labels:
        app.kubernetes.io/component: redis
    spec:
      enableServiceLinks: false
      automountServiceAccountToken: false
      securityContext:
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      hostUsers: false
      containers:
        - env:
          - name: IMMICH_MACHINE_LEARNING_URL
            value: http://immich-machine-learning:3003
          - name: REDIS_HOSTNAME
            value: immich-valkey
          image: docker.io/valkey/valkey:9.1.2-alpine@sha256:48332870af354a799964c0012ae1194a0bf2bf894eb508f945810596dc2d8d11
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
              - sh
              - -c
              - valkey-cli ping | grep PONG
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          name: main
          ports:
          - containerPort: 6379
            name: redis
            protocol: TCP
          readinessProbe:
            exec:
              command:
              - sh
              - -c
              - valkey-cli ping | grep PONG
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
          startupProbe:
            exec:
              command:
              - sh
              - -c
              - valkey-cli ping | grep PONG
            failureThreshold: 30
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 25m
              memory: 50Mi
            limits:
              memory: 200Mi
          volumeMounts:
          - mountPath: /data
            name: data
      resources:
        requests:
          memory: 1Gi
      volumes:
        - emptyDir: {}
          name: data
