k8s/manifests/apps/immich/server.yaml
---
# Source: immich/templates/server.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  labels:
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  ports:
    - port: 2283
      targetPort: http
      protocol: TCP
      name: http
    - port: 8081
      targetPort: metrics-api
      protocol: TCP
      name: metrics-api
    - port: 8082
      targetPort: metrics-ms
      protocol: TCP
      name: metrics-ms
  selector:
    app.kubernetes.io/component: server
---
# Source: immich/templates/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  labels:
    app.kubernetes.io/component: server
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: server
  template:
    metadata:
      labels:
        app.kubernetes.io/component: server
    spec:
      enableServiceLinks: false
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      hostUsers: false
      containers:
        - env:
            - name: DB_DATABASE_NAME
              value: app
            - name: DB_HOSTNAME
              value: immich-database-rw
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: immich-database-app
            - name: DB_USERNAME
              valueFrom:
                secretKeyRef:
                  key: username
                  name: immich-database-app
            - name: IMMICH_ALLOW_SETUP
              value: "false"
            - name: IMMICH_MACHINE_LEARNING_URL
              value: http://immich-machine-learning:3003
            - name: IMMICH_TELEMETRY_INCLUDE
              value: all
            - name: REDIS_HOSTNAME
              value: immich-valkey
            # total madness to enable IPv6 functionality for redis
            # https://github.com/immich-app/immich/issues/10397
            # echo '{"host": "immich-valkey","family": 6}' | base64
            - name: REDIS_URL
              value: ioredis://eyJob3N0IjogImltbWljaC12YWxrZXkiLCJmYW1pbHkiOiA2fQo=
          image: ghcr.io/immich-app/immich-server:v3.2.4
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/server/ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          name: main
          ports:
            - containerPort: 2283
              name: http
              protocol: TCP
            - containerPort: 8081
              name: metrics-api
              protocol: TCP
            - containerPort: 8082
              name: metrics-ms
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/server/ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /api/server/ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /data
              name: data
          resources:
            requests:
              memory: 1Gi
              cpu: 150m
            limits:
              memory: 3Gi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: photos
---
# Source: immich/templates/server.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-server
  labels:
    app.kubernetes.io/component: server
    external-dns: "true"
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Photos
    gethomepage.dev/icon: immich
    gethomepage.dev/group: Apps
    gethomepage.dev/pod-selector: app.kubernetes.io/name=immich
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: services
      namespace: infra
      sectionName: "main"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: immich-server
          port: 2283
          weight: 1
